--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,44 +1,154 @@
-* {
-    box-sizing: border-box;
-}
-
-.container{
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 200px auto;
-    grid-template-rows: auto;
-}
-
-.content{
-    padding: 2rem 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: flex-start;
-    gap: 1rem 2rem;
-    flex-wrap: wrap;
-}
-
-.card{
-    border: 1px solid #ccc;
-    padding: 1rem;
-}
-
-.card__title{
-    margin-bottom: 1rem;
-}
-
-.add-tag{
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  input[type=checkbox] {
+    --active: #3a7c32;
+    --active-inner: #fff;
+    --inactive: #c60000;
+    --inactive-inner: #fff;
+    --border: #BBC1E1;
+    --border-hover: #275EFE;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    height: 21px;
+    position: relative;
+    margin: 0;
     cursor: pointer;
+    border: 1px solid var(--bc, var(--border));
+    background: var(--b, var(--background));
+    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+  }
+  input[type=checkbox]:after {
+    content: "";
+    display: block;
+    left: 0;
+    top: 0;
+    position: absolute;
+    transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+  }
+  input[type=checkbox]:not(:checked) {
+    --b: var(--inactive);
+    --bc: var(--inactive-inner) ;
+  }
+  input[type=checkbox]:checked {
+    --b: var(--active);
+    --bc: var(--active);
+    --d-o: .3s;
+    --d-t: .6s;
+    --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+  }
+  input[type=checkbox]:hover:not(:checked):not(:disabled) {
+    --bc: var(--border-hover);
+  }
+  input[type=checkbox]:focus {
+    box-shadow: 0 0 0 var(--focus);
+  }
+  input[type=checkbox]:not(.switch) {
+    width: 21px;
+  }
+  input[type=checkbox]:not(.switch):after {
+    opacity: var(--o, 0);
+  }
+  input[type=checkbox]:not(.switch):checked {
+    --o: 1;
+  }
+  input[type=checkbox] + label {
+    line-height: 21px;
+    display: inline-block;
+    vertical-align: top;
+    cursor: pointer;
+    margin-left: 4px;
+  }
+  input[type=checkbox]:not(.switch) {
+    border-radius: 7px;
+  }
+  input[type=checkbox]:not(.switch):after {
+    width: 5px;
+    height: 9px;
+    border: 2px solid var(--active-inner);
+    border-top: 0;
+    border-left: 0;
+    left: 7px;
+    top: 4px;
+    transform: rotate(var(--r, 20deg));
+  }
+  input[type=checkbox]:not(.switch):checked {
+    --r: 43deg;
+  }
+  input[type=checkbox].switch {
+    width: 38px;
+    border-radius: 11px;
+  }
+  input[type=checkbox].switch:after {
+    left: 2px;
+    top: 2px;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: var(--ab, var(--border));
+    transform: translateX(var(--x, 0));
+  }
+  input[type=checkbox].switch:checked {
+    --ab: var(--active-inner);
+    --x: 17px;
+  }
+}
+* {
+  box-sizing: border-box;
 }
 
+.container {
+  max-width: 100vw !important;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 250px auto;
+  grid-template-rows: auto;
+  margin: 0;
+}
+
+.login {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: flex-start;
+  gap: 1rem 2rem;
+  flex-wrap: wrap;
+}
+
+.card {
+  border: 1px solid #ccc;
+  padding: 1rem;
+}
+.card__title {
+  margin-bottom: 1rem;
+}
+
+.add-tag {
+  cursor: pointer;
+}
 .add-tag * {
-    pointer-events: none;
+  pointer-events: none;
 }
 
+aside {
+  background-color: lightgreen;
+  padding: 1rem;
+}
 
+.menu-list a {
+  color: #000;
+}
 
+.menu-label {
+  color: #0000FF;
+}
 
-
-
-
+.content table td {
+  vertical-align: middle;
+}
