--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,7 @@
 <%- include('./partials/header'); %>
 
 <body class="container">
-    <aside>
-        Hello world
-    </aside>
+    <%- include('./partials/aside')%>
     <main class="content">
         <div class="card">
             <h2 class="card__title">Consulter les produits</h2>
@@ -24,6 +22,10 @@
         <div class="card">
             <h2 class="card__title">Consulter les variétés</h2>
             <%- include('./components/btn_link', {link: 'plots/products', title: 'Voir les parcelles avec les produits', icon: 'mdi-eye-outline'}); %>
+        </div>
+        <div class="card">
+            <h2 class="card__title">Consulter les réservations</h2>
+            <%- include('./components/btn_link', {link: 'bookings', title: 'Voir les réservations', icon: 'mdi-eye-outline'}); %>
         </div>
     </main>
 </body>
